configs/kustomize/hello-world/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prenom-hello-world-ingress
spec:
  rules:
  - host: "prenom.dev.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "prenom-hello-world-service"
          servicePort: 8080
